# novanotebook

./: .gitignore  LICENSE  README.md  package.json
notebook-backend/: .env.template  main.py  pyproject.toml  requirements.txt
notebook-backend/connectors/: README.md
notebook-backend/connectors/adapters/: README.md  posthog_adapter.py
notebook-backend/connectors/adapters/posthog/: adapter.py  posthog_adapter.py
notebook-backend/connectors/helpers/: README.md
notebook-backend/connectors/models/: README.md  posthog_models.py
notebook-backend/connectors/services/: README.md
notebook-backend/connectors/sources/: README.md  posthog_client.py
notebook-backend/data/adapters/: README.md  posthog_adapter.py
notebook-backend/data/models/: README.md
notebook-backend/data/sources/: README.md  posthog_client.py
notebook-backend/helpers/: types.py
notebook-backend/helpers/aws/s3/: s3.py
notebook-backend/helpers/connectors/: base.py  factory.py  manager.py  posthog_integration.py
notebook-backend/helpers/lambda_generator/: lambda_generator.py
notebook-backend/helpers/notebook/: magic_command.py  notebook.py
notebook-backend/helpers/scheduler/: notebook_scheduler.py
notebook-backend/helpers/supabase/: client.py  connect_credentials.py  connector_credentials.py  job_status.py  notebooks.py
notebook-backend/helpers/utils/: ansi_cleaner.py
notebook-backend/lambda_generator/: generate_lambda_fn.py  role_policy.json
notebook-backend/llm_helper/: generate_lambda_script.py
notebook-backend/notebooks/: hello.ipynb  i  i.ipynb  testground.ipynb  testing
(+87 files in other folders)
