[project]
name = "notebook-backend"
version = "0.1.0"
description = "Backend for new jupyter notebook"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.68",
    "fastapi>=0.115.5",
    "ipykernel>=6.29.5",
    "jupyter-client>=8.6.3",
    "sh>=2.1.0",
    "uvicorn>=0.32.1",
    "websockets>=14.1",
]

